--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,2 +1,40 @@
-body
-  background: #EEE
+$main: #000
+
+*
+  -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box
+  box-sizing: border-box
+
+img
+  border: 0
+
+a
+  text-decoration: none
+  outline: none
+
+html, body
+  margin: 0
+  padding: 0
+  color: $main
+  height: 100%
+
+.clear
+  clear: both
+
+#map, #container, .content
+  width: 100%
+  height: 100%
+
+#map
+  z-index: 1
+
+h1
+  position: absolute
+  background: transparent
+  z-index: 2
+  color: #FFF
+  font-size: 1.1em
+  top: 1px
+  left: 3px
+  margin: 0
+  padding: 0
