--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,6 +1,6 @@
 !!! 5
 %html
-  - TITLE = "Sig"
+  - TITLE = "GIS"
   %head
     %title= TITLE
     %link{ rel: "stylesheet", href: "/css/main.css" }
@@ -12,4 +12,7 @@
         %h1= TITLE
       %nav
       %section.content= yield
+    %script{ type: "text/javascript", src: "/js/vendor/underscore.js" }
+    %script{ type: "text/javascript", src: "/js/vendor/zepto.js" }
+    %script{ type: "text/javascript", src: "http://maps.google.com/maps/api/js?sensor=false" }
     %script{ type: "text/javascript", src: "/js/app.js" }
