--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,9 +30,13 @@ h1 {
   position: absolute;
   background: transparent;
   z-index: 2;
-  color: white;
   font-size: 1.1em;
   top: 1px;
   left: 3px;
   margin: 0;
   padding: 0; }
+  h1 a {
+    color: white;
+    text-shadow: 0px 1px 1px #999999; }
+  h1 a:hover {
+    text-shadow: 0px 1px 3px #666666; }
