--- a/sass/main.sass
+++ b/sass/main.sass
@@ -32,9 +32,13 @@ h1
   position: absolute
   background: transparent
   z-index: 2
-  color: #FFF
   font-size: 1.1em
   top: 1px
   left: 3px
   margin: 0
   padding: 0
+  a
+    color: #FFF
+    text-shadow: 0px 1px 1px #999
+  a:hover
+    text-shadow: 0px 1px 3px #666
