--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,7 +26,7 @@ html, body {
 #map {
   z-index: 1; }
 
-h1 {
+header, h1 {
   position: absolute;
   background: transparent;
   z-index: 2;
@@ -35,8 +35,17 @@ h1 {
   left: 3px;
   margin: 0;
   padding: 0; }
-  h1 a {
+  header a, h1 a {
     color: white;
     text-shadow: 0px 1px 1px #999999; }
-  h1 a:hover {
+  header a:hover, h1 a:hover {
     text-shadow: 0px 1px 3px #666666; }
+
+header nav {
+  margin: 0 0 0 70px; }
+  header nav a {
+    padding: 1px 3px;
+    margin: 0 4px 0 0;
+    background: rgba(200, 200, 200, 0.4); }
+  header nav a:hover {
+    background: rgba(100, 100, 100, 0.5); }
