--- a/sass/main.sass
+++ b/sass/main.sass
@@ -28,7 +28,7 @@ html, body
 #map
   z-index: 1
 
-h1
+header, h1
   position: absolute
   background: transparent
   z-index: 2
@@ -42,3 +42,11 @@ h1
     text-shadow: 0px 1px 1px #999
   a:hover
     text-shadow: 0px 1px 3px #666
+header nav
+  margin: 0 0 0 70px
+  a
+    padding: 1px 3px
+    margin: 0 4px 0 0
+    background: rgba(200, 200, 200, 0.4)
+  a:hover
+    background: rgba(100, 100, 100, 0.5)
